# voice_input

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_TRANSCRIPTION_TEST.md  SPEC-RECORDING.md  SPEC-TRANSCRIPTION.md  config.h  hello_world.m4a  main.cpp  mainwindow.cpp  mainwindow.h  test.sh  test_auto_stop.cpp  whisperapi.cpp  whisperapi.h
src/config/: config.h
src/core/: audiorecorder.cpp  audiorecorder.h  mocktranscriptionservice.cpp  mocktranscriptionservice.h  openaitranscriptionservice.cpp  openaitranscriptionservice.h  statusutils.cpp  statusutils.h  transcriptionfactory.cpp  transcriptionfactory.h  transcriptionservice.cpp  transcriptionservice.h
src/tests/: test_audiorecorder.cpp  test_file_verification.cpp  test_transcription.cpp
src/ui/: mainwindow.cpp  mainwindow.h
